--- a/experiments/10-english-goal-manipulation/english-QUD.html
+++ b/experiments/10-english-goal-manipulation/english-QUD.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>9-English-QUD-revised</title>
+    <title>8-English-EXPAND</title>
 
     <!--JS-->
 
@@ -44,7 +44,7 @@
 
   <div class="slide" id="i0" >
     <img src="../_shared/images/meaningLab.png" alt="University of California, Meaning Lab" id="meaningLabLogo"></img>
-    <p>This HIT involves interpreting stories of English. The task should take about eight minutes. Please pay attention. Thanks!</p>
+    <p>This HIT involves interpreting stories of English. The task should take about six minutes. Please pay attention. Thanks!</p>
     <button id="start_button" type="button">Start Experiment</button>
 	  <p id="legal">Legal information: By answering the following questions, you are participating in a study being performed by cognitive scientists at the University of California, Irvine. If you have questions about this research, please contact Greg Scontras at <a href="mailto://g.scontras@uci.edu">g.scontras@uci.edu</a>. You must be  at least 18 years old to participate. Your participation in this research is voluntary. You may decline to answer any or all of the following questions. You may decline further participation, at any time, without adverse consequences. Your anonymity is assured; the researchers who have requested your participation will not receive any personal information about you.</p>
 <!--     <p id="instruct-text">You will hear stories followed by a description of the story and be asked to say if the description is right or wrong. The HIT should take 10-15 minutes. Please pay attention, thanks!</p>
@@ -54,95 +54,49 @@
 
   <div class="slide" id="instructions">
     <h3>Instructions</h3>
-    <p>You will see two puppets, Elephant and Shark, discuss stories that Elephant is reading in his storybook. Shark asks Elephant about the story, and your goal is to decide whether Elephant's answer is right or wrong.</p>
+    <p>You will be given a short story to read. After you read the story, click "next" and two puppets will discuss the story.  Your goal is to decide whether the second puppet is right or wrong in his account of the story. There will be two practice trials before the experiment begins. </p>
     <button onclick="_s.button()">Continue</button>
   </div>
   
-<!--   <div class="slide" id="pretrial">
-    <h3>End of Practice</h3>
-    <p>The practice trials are now over. There will be 20 more trials to this experiment. </p>
-    <button onclick="_s.button()">Continue</button>
-  </div> -->
-  
-
   <div class="slide" id="one_slider_practice">
 	<!-- <button id="play" type = "button" onclick = "playPause()">Play</button> -->
 	<!-- add 'controls' when debugging -->
+	
 
-      <p>Elephant was reading a story in his storybook.</p>
-      <div class="elephant_story">
-<!--       <div class="elephant_story"> -->
-        <img src = "expt_files/shark.jpg" class = "p_hidden_say puppet shark" width = "200">
-<!--       </div>
- -->      </div>
-      <div id="practiceStory" class="p_story">
-        <p id="practiceStoryStory" class="storyText" style="font-size: 17"> </p> 
-        <p class="number"> Page <span id="pageNumber">XXX</span></p>
-      </div>
-      <div class="elephant_story">
-        <img src = "expt_files/elephant.jpg" class = "p_hidden_listen puppet elephant" id = "puppet1" width = "200">
-      </div>
+  <b> Shark has to sort stories. </b>
+  <br>
+  <figure>
+  <img src="expt_files/graybin.jpg" class="bins" width = "200">
+  <figcaption>0 cars</figcaption>
+  </figure>
+  <figure>
+  <img src="expt_files/redbin.jpg" class="bins" width = "200"> 
+  <figcaption>2 cars</figcaption>
+  </figure>
 
-  <div>
-      <!-- <img src = "expt_files/shark.jpg" class = "p_hidden_say puppet" id = "puppet2" width="130"> -->
-      <div class = "center">
-      <button onclick="p_showButton()" class = "p_showButton">Next</button>
-      <script> 
-      function p_showButton() {
-          // $(".p_hidden_listen").hide();
-          $(".p_showButton").hide();
-          $(".p_hidden_feature").show(); 
-          $(".p_hidden_say").show();                   
-          $(".p_show_button").show();
-        }
-      </script>
-
-      <p class="p_hidden_feature text">Then, Shark came and asked Elephant to tell her about the story.<br><br>
-      Elephant said:</p>
-      <p class="p_hidden_feature text" style="font-weight: bold">
-        <font id="practiceFeatures" color="blue"></font>
-      </p>
-      </div>
-    <!-- <img src = "expt_files/elephant.jpg" class = "p_hidden_say puppet" id = "puppet1" width = "130"> -->
-  </div>
-
-
-  <div>
-    <!-- <img src = "expt_files/shark.jpg" class = "p_hidden_question puppet" id = "puppet2" width="130"> -->
-      <div class = "center">
-      <button onclick="p_show_button()" class = "p_show_button">Next</button>
-      <script> 
-      function p_show_button() {
-          $(".p_show_button").hide();
-          // $(".p_hidden_say").hide();
-          $(".p_show_answer_button").show();
-          $(".p_hidden_question").show();          
-        }
-      </script>
-      <p class="p_hidden_question text">Then, Shark asked:</p>
-      <p  class="p_hidden_question text" style="font-weight: bold;">
-        <font id="practiceQuestion" color="red"></font>
-      </p>
-      <p class="p_hidden_answer text">Elephant answered:</p>
-      <p class="p_hidden_answer text" style="font-weight: bold;">
-        <font id="practiceSentence" color="blue"></font>
-      </p>
-      </div>
-    <!-- <img src = "expt_files/elephant.jpg" class = "p_hidden_answer puppet" id = "puppet1" width = "130">  -->
-  </div>
-
-  <button onclick="p_show_answer_button()" class = "p_show_answer_button">Next</button>
+    <p id="practiceStory" style="font-size: 17"> </p>
+    <button onclick="p_showButton()" class = "p_showButton">Next</button>
     <script> 
-      function p_show_answer_button() {
-          // $(".p_hidden_question").hide();
-          $(".p_hidden_answer").show();
-          $(".p_show_answer_button").hide();
+      function p_showButton() {
           $(".p_hidden").show();
+          $(".p_showButton").hide();
       }
     </script>
-    <p class = "p_hidden text"><b>Do you agree with Elephant's answer?</b></p>
+
+  <div>
+    <img src = "expt_files/shark.jpg" class = "p_hidden puppet" id = "puppet2" width="130">
+      <div class = "center">
+      <p class="p_hidden text" style="font-size: 17">The shark asked:</p>
+      <p id="practiceQuestion" class="p_hidden text" style="font-weight: bold; font-size: 17"></p>
+      <p class="p_hidden text" style="font-size: 17">The elephant said:</p>
+	<!-- <p><img src = "../_shared/images/puppet.jpg" class = "p_hidden" id = "puppet"></p> -->
+      <p id="practiceSentence" class="p_hidden text" style="font-weight: bold; font-size: 17"></p>
+      </div>
+    <img src = "expt_files/elephant.jpg" class = "p_hidden puppet" id = "puppet1" width = "130"> 
+  </div>
+    <p class = "p_hidden text" style="font-size: 17"> Is the elephant right?</p>
     <table id="practice_slider" class="slider_table p_hidden text">
-      <tr><td class="left p_hidden text"><b>definitely not</b></td><td class="right p_hidden text"><b>definitely</b></td></tr>
+      <tr><td class="left p_hidden text">definitely not</td><td class="right p_hidden text">definitely</td></tr>
       <tr><td colspan="2"><div id="prac_single_slider" class="slider p_hidden text"></div></td></tr>
     </table>
 	  <!-- <p class = "p_hidden text">Please justify your answer:</p>
@@ -158,79 +112,27 @@
   <div class="slide" id="one_slider">
 	<!-- <button id="play" type = "button" onclick = "playPause()">Play</button> -->
 	<!-- add 'controls' when debugging -->
-<div>
-
-      <p>Elephant was reading a story in his storybook.</p>
-      <div class="elephant_story">
-        <img src = "expt_files/shark.jpg" class = "hidden_say puppet shark" width = "200">
-        </div>        
-      <div id="expStory" class="story">
-        <p id="expStoryStory" class="storyText" style="font-size: 17"> </p> 
-        <p class="number"> Page <span id="pageNumberTest">XXX</span></p>
-      </div>
-      <div class="elephant_story">
-        <img src = "expt_files/elephant.jpg" class = "hidden_listen puppet elephant" id = "puppet1" 
-        width = "200">
-      </div>
-
-  <div>
-      <div class = "center">
-      <button onclick="showButton()" class = "showButton">Next</button>
-      <script> 
-      function showButton() {
-          // $(".p_hidden_listen").hide();
-          $(".showButton").hide();
-          $(".hidden_feature").show(); 
-          $(".hidden_say").show();                   
-          $(".show_button").show();
-        }
-      </script>
-
-      <p class="hidden_feature text">Then, Shark came and asked Elephant to tell her about the story.<br><br>
-      Elephant said:</p>
-      <p class="hidden_feature text" style="font-weight: bold">
-        <font id="expFeatures" color="blue"></font>
-      </p>
-      </div>
-   <!--  <img src = "expt_files/elephant.jpg" class = "hidden_say puppet" id = "puppet1" width = "130"> -->
-  </div>
-
-
-  <div>
-    <!-- <img src = "expt_files/shark.jpg" class = "hidden_question puppet" id = "puppet2" width="130"> -->
-      <div class = "center">
-      <button onclick="show_button()" class = "show_button">Next</button>
-      <script> 
-      function show_button() {
-          $(".show_button").hide();
-          // $(".hidden_say").hide();
-          $(".show_answer_button").show();
-          $(".hidden_question").show();          
-        }
-      </script>
-      <p class="hidden_question text">Then, Shark asked:</p>
-      <p  class="hidden_question text" style="font-weight: bold;">
-        <font id="expQUD" color="red"></font>
-      </p>
-      <p class="hidden_answer text">Elephant answered:</p>
-      <p class="hidden_answer text" style="font-weight: bold;">
-        <font id="testSentence" color="blue"></font>
-      </p>
-      </div>
-    <!-- <img src = "expt_files/elephant.jpg" class = "hidden_answer puppet" id = "puppet1" width = "130">  -->
-  </div>
-
-  <button onclick="show_answer_button()" class = "show_answer_button">Next</button>
-    <script> 
-      function show_answer_button() {
-          $(".hidden_answer").show();
-          $(".show_answer_button").hide();
-          $(".hidden").show();
-      }
+    <p id="expStory" style="font-size: 17"> </p>
+    <button onclick="showButton()" class = "showButton">Next</button>
+    <script>
+    function showButton() {
+      $(".hidden").show();
+      $(".showButton").hide();
+    }
     </script>
-    <p class = "hidden"><b>Do you agree with Elephant's answer?</b></p>
+  <div>
+    <img src = "expt_files/shark.jpg" class = "hidden puppet" id = "puppet2" width="130">
+      <div class = "center">
+      <p class="hidden text" style="font-size: 17">The shark asked:</p>
+      <p id="expQUD" class="hidden text" style="font-weight: bold; font-size: 17"></p>
+      <p class="hidden text" style="font-size: 17">The elephant said:</p>
+      <p id="testSentence" class="hidden text" style="font-weight: bold; font-size: 17"></p>
+      </div>
+    <img src = "expt_files/elephant.jpg" class = "hidden puppet" id = "puppet1" width="130">
+  </div>
+	<p class = "hidden" style="font-size: 17">Is the elephant right?</p>
     <table id="slider_table" class="slider_table hidden">
-      <tr><td class="left hidden"><b>definitely not</b></td><td class="right hidden"><b>definitely</b></td></tr>
+      <tr><td class="left hidden">definitely not</td><td class="right hidden">definitely</td></tr>
       <tr><td colspan="2"><div id="single_slider" class="slider hidden"></div></td></tr>
     </table>
 	  <!-- <p class = "hidden">Please justify your answer:</p>
