--- a/experiments/8-expanded-english/english-QUD.html
+++ b/experiments/8-expanded-english/english-QUD.html
@@ -58,17 +58,22 @@
     <button onclick="_s.button()">Continue</button>
   </div>
   
-  <div class="slide" id="pretrial">
-    <h3>End of Practice</h3>
-    <p>The practice trials are now over. There will be 20 more trials to this experiment. </p>
-    <button onclick="_s.button()">Continue</button>
-  </div>
-  
-
   <div class="slide" id="one_slider_practice">
 	<!-- <button id="play" type = "button" onclick = "playPause()">Play</button> -->
 	<!-- add 'controls' when debugging -->
-	<b> This is a practice trial. </b>
+	
+
+  <b> Shark has to sort stories. </b>
+  <br>
+  <figure>
+  <img src="expt_files/graybin.jpg" class="bins" width = "200">
+  <figcaption>0 cars</figcaption>
+  </figure>
+  <figure>
+  <img src="expt_files/redbin.jpg" class="bins" width = "200"> 
+  <figcaption>2 cars</figcaption>
+  </figure>
+
     <p id="practiceStory" style="font-size: 17"> </p>
     <button onclick="p_showButton()" class = "p_showButton">Next</button>
     <script> 
