--- a/experiments/8-expanded-english/english-QUD.html
+++ b/experiments/8-expanded-english/english-QUD.html
@@ -63,7 +63,7 @@
 	<!-- add 'controls' when debugging -->
 	
 
-  <b> Shark has to sort stories. </b>
+  <!-- <b> Shark has to sort stories. </b>
   <br>
   <figure>
   <img src="expt_files/graybin.jpg" class="bins" width = "200">
@@ -72,7 +72,7 @@
   <figure>
   <img src="expt_files/redbin.jpg" class="bins" width = "200"> 
   <figcaption>2 cars</figcaption>
-  </figure>
+  </figure> -->
 
     <p id="practiceStory" style="font-size: 17"> </p>
     <button onclick="p_showButton()" class = "p_showButton">Next</button>
