updated goal instructions

--- a/experiments/10-english-goal-manipulation/english-goal-manipulation.html
+++ b/experiments/10-english-goal-manipulation/english-goal-manipulation.html
@@ -54,7 +54,7 @@
 
   <div class="slide" id="instructions">
     <h3>Instructions</h3>
-    <p>You will be given a short story to read. After you read the story, click "next" and two puppets will discuss the story.  Your goal is to decide whether the second puppet is right or wrong in his account of the story. There will be two practice trials before the experiment begins. </p>
+    <p>You will be helping Shark sort storybooks into the appropriate bins based on who you decided is right or wrong. First, you will be given a short story to read. After you read the story, click "next" and two puppets will discuss the story. Your goal is to decide whether the second puppet is right or wrong in his account of the story.</p>
     <button onclick="_s.button()">Continue</button>
   </div>
   
