--- a/experiments/10-english-goal-manipulation/english-goal-manipulation.html
+++ b/experiments/10-english-goal-manipulation/english-goal-manipulation.html
@@ -69,12 +69,12 @@
 
   <figure>
     <img src="expt_files/graybin.jpg" class="bins" width = "200">
-    <figcaption>0 <t id="practiceItem" class = "bins"></t></figcaption>
+    <figcaption>0 <t id="practiceBin1" class = "bins"></t></figcaption>
   </figure>
 
   <figure>
     <img src="expt_files/redbin.jpg" class="bins" width = "200"> 
-    <figcaption><t id="practiceNumber"></t> <t id="practiceItem" class ="bins"></t></figcaption>
+    <figcaption><t id="practiceNumber"></t> <t id="practiceBin2" class ="bins"></t></figcaption>
   </figure>
 
     <p id="practiceStory" style="font-size: 17"> </p>
