posted expt, analysis script

--- a/experiments/10-english-goal-manipulation/english-goal-manipulation.html
+++ b/experiments/10-english-goal-manipulation/english-goal-manipulation.html
@@ -70,19 +70,19 @@
       <span id="bins"></span>
     </div>
 
-    <p>Shark's friend, Elephant, is helping her by reading some of the stories.<br>
-      Here is a story that Elephant read:<p>
+    <p>Shark's friend, Elephant, is helping her by reading some of the books.<br>
+      Here is a book that Elephant read:<p>
 
     <div>
-      <div id="expStory" class="story">
-        <p id="expStoryStory" class="storyText"> </p> 
+      <div id="expStory" class="story" align="left">
+        <p id="expStoryStory" class="storyText" align="left"> </p> 
       </div>
       <div class="elephant_story">
         <img src = "expt_files/elephant.jpg" class = "puppet" id = "puppet1" width = "200">
       </div>
 
     <div class = "center">
-      <p class="text">Shark asked:</p>
+      <p class="text">In order to sort the book, Shark asked:</p>
       <p id="expQUD" class="text" style="font-weight: bold"></p>
       <p class="text">Elephant answered:</p>
       <p id="testSentence" class="text" style="font-weight: bold"></p>
