updated controls and instructions

--- a/experiments/12-english-multi-trial-goal-structure/english-goal-manipulation.html
+++ b/experiments/12-english-multi-trial-goal-structure/english-goal-manipulation.html
@@ -64,7 +64,7 @@
 	<!-- <button id="play" type = "button" onclick = "playPause()">Play</button> -->
 	<!-- add 'controls' when debugging -->
 
-    <p> Shark is trying to oraganize her storybooks about <b><span id="topic"></span></b>. She has been sorting books according to <b><span id="goal"></span></b>.<p>
+    <p> Shark is trying to organize her storybooks about <b><span id="topic"></span></b>. She has been sorting books according to <b><span id="goal"></span></b>.<p>
 
     <div> <img src = "expt_files/shark.jpg" class = "puppet" id = "puppet2" width="130">
       <span id="bins"></span>
