add 2 control bins, updates of structures of two experiments

--- a/experiments/11-english-single-trial-no-goal-structure/english-goal-manipulation.html
+++ b/experiments/11-english-single-trial-no-goal-structure/english-goal-manipulation.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>10-English-goal-manipulation</title>
+    <title>11-english-single-trial-no-goal-structure</title>
 
     <!--JS-->
 
@@ -63,11 +63,14 @@
   <div class="slide" id="one_slider">
 	<!-- <button id="play" type = "button" onclick = "playPause()">Play</button> -->
 	<!-- add 'controls' when debugging -->
-  <img src = "expt_files/shark.jpg" class = "puppet" id = "puppet2" width="130">
+
+<div>
+  <img src = "expt_files/shark.jpg" class = "puppet" id = "puppet2" width="130"> 
   <div class = "center">
-    <p> Shark is trying to oraganize her storybooks about <b><span id="topic"></span></b>.
+    <p> Shark is trying to oraganize </p><p>her storybooks about <b><span id="topic"></span></b>.</p>
     <!--. She has been sorting books according to <b><span id="goal"></span></b>.<p>-->
   </div>
+</div>
 
     
     
@@ -83,14 +86,14 @@
         <img src = "expt_files/elephant.jpg" class = "puppet" id = "puppet1" width = "200">
       </div>
 <div>
-  <img src = "expt_files/shark.jpg" class = "puppet" id = "puppet2" width="130">
+<!--   <img src = "expt_files/shark.jpg" class = "puppet" id = "puppet2" width="130"> -->
     <div class = "center">
       <p class="text">In order to sort the book, Shark asked:</p>
       <p id="expQUD" class="text" style="font-weight: bold"></p>
       <p class="text">Elephant answered:</p>
       <p id="testSentence" class="text" style="font-weight: bold"></p>
     </div>
-  <img src = "expt_files/elephant.jpg" class = "puppet" id = "puppet1" width = "130">
+<!--   <img src = "expt_files/elephant.jpg" class = "puppet" id = "puppet1" width = "130"> -->
 </div>
 
 	  <p>Is Elephant right?</p>
