update to alignment

--- a/experiments/11-english-single-trial-no-goal-structure/english-goal-manipulation.html
+++ b/experiments/11-english-single-trial-no-goal-structure/english-goal-manipulation.html
@@ -65,9 +65,9 @@
 	<!-- add 'controls' when debugging -->
 
 <div>
-  <img src = "expt_files/shark.jpg" class = "puppet" id = "puppet2" width="130"> 
+  <img src = "expt_files/shark.jpg" class = "shark" id = "puppet2" width="130"> 
   <div class = "center">
-    <p> Shark is trying to oraganize </p><p>her storybooks about <b><span id="topic"></span></b>.</p>
+    Shark is trying to oraganize <br> her storybooks about <b><span id="topic"></span></b>.
     <!--. She has been sorting books according to <b><span id="goal"></span></b>.<p>-->
   </div>
 </div>
