updated wording and formatting

--- a/experiments/12-english-multi-trial-goal-structure/english-goal-manipulation.html
+++ b/experiments/12-english-multi-trial-goal-structure/english-goal-manipulation.html
@@ -66,12 +66,12 @@
 
     <p> Shark is trying to organize her storybooks about <b><span id="topic"></span></b>. She has been sorting books according to <b><span id="goal"></span></b>.<p>
 
-    <div> <img src = "expt_files/shark.jpg" class = "puppet" id = "puppet2" width="130">
+    <div> <img src = "expt_files/shark.jpg" class = "shark" id = "puppet2" width="130">
       <span id="bins"></span>
     </div>
 
-    <p>Shark's friend, Elephant, is helping her by reading some of the books.<br>
-      Here is a book that Elephant read:<p>
+    <p><!-- Shark's friend, Elephant, is helping her by reading some of the books.<br> -->
+      Here is a book that Elephant read:</p>
 
     <div>
       <div id="expStory" class="story" align="left">
