update subject information slide

--- a/experiments/13-Chinese-goal-manipulation/Chinese-goal-manipulation.html
+++ b/experiments/13-Chinese-goal-manipulation/Chinese-goal-manipulation.html
@@ -1,6 +1,8 @@
 <html>
 
 <head>
+    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+
     <title>13-Chinese-goal-manipulation</title>
 
     <!--JS-->
@@ -184,7 +186,7 @@
         <label><option value="5plus">5年以上</option></label>
       </select>
 
-      <p>你在家里最常用的语言是什么?</p>
+     <!--  <p>你在家里最常用的语言是什么?</p>
       <select id="homeLanguage">
         <label><option value="-1"></option></label>
         <label><option value="chinese">汉语</option></label>
@@ -209,7 +211,7 @@
         <label><option value="nearNative">接近母语级别</option></label>
         <label><option value="native">母语级别</option></label>
         <label><option value="other">我希望不回答</option></label>
-      </select>
+      </select> -->
 
       <p>我们期待你对本次试验的任何评价。请在这里填写:</p>
       <textarea id="comments" rows="3" cols="50"></textarea>
