--- a/experiments/13-Chinese-goal-manipulation/Chinese-goal-manipulation.html
+++ b/experiments/13-Chinese-goal-manipulation/Chinese-goal-manipulation.html
@@ -19,7 +19,7 @@
     <script src="../_shared/js/stream-V2.js"></script>
 
     <!-- cocolab general utilities -->
-    <script src="../_shared/js/mmturkey.js "></script>
+    <script src="js/mmturkey.js "></script>
     <script src="../_shared/js/browserCheck.js"></script>
     <script src="../_shared/js/utils.js"></script>
     <!-- if you want to draw cute creatures (depends on raphael): -->
@@ -186,35 +186,12 @@
         <label><option value="5plus">5年以上</option></label>
       </select>
 
-     <!--  <p>你在家里最常用的语言是什么?</p>
-      <select id="homeLanguage">
-        <label><option value="-1"></option></label>
-        <label><option value="chinese">汉语</option></label>
-        <label><option value="english" >英语</option></label>
-        <label><option value="other">其他</option></label>
-      </select>
-
-      <p>你在家以外的地方最常使用的语言是什么?</p>
-      <select id="outsideLanguage">
-        <label><option value="-1"></option></label>
-        <label><option value="chinese">汉语</option></label>
-        <label><option value="english" >英语</option></label>
-        <label><option value="other">其他</option></label>
-      </select>
-
-      <p>你认为你的中文水平如何?</p>
-      <select id="proficiency">
-        <label><option value="-1"></option></label>
-        <label><option value="basic">初级</option></label>
-        <label><option value="intermediate" >中级</option></label>
-        <label><option value="advanced">高级</option></label>
-        <label><option value="nearNative">接近母语级别</option></label>
-        <label><option value="native">母语级别</option></label>
-        <label><option value="other">我希望不回答</option></label>
-      </select> -->
-
       <p>我们期待你对本次试验的任何评价。请在这里填写:</p>
       <textarea id="comments" rows="3" cols="50"></textarea>
+
+      <p>Prolific code:<br>
+        <b>1AF363A5</b>
+      </p>
       <br/>
       <button onclick="_s.submit()">提交</button>
     </div>
@@ -222,6 +199,8 @@
 
   <div id="thanks" class="slide js" >
     <p  class="big">谢谢参与!</p>
+
+    <p><a href="https://app.prolific.co/submissions/complete?cc=1AF363A5">https://app.prolific.co/submissions/complete?cc=1AF363A5</a></p>
   </div>
 
   <div class="progress">
